2003-05-06  Earnie Boyd  <earnie@users.sf.net>

	* configure.in (W32API_INCLUDE): Need the -I switch in the value.
	* mingwex/configure.in (W32API_INCLUDE): Ditto.
	* profile/configure.in (W32API_INCLUDE): Ditto.

2003-05-06  Earnie Boyd  <earnie@users.sf.net>

	* configure.in (CFLAGS): Remove -D__USE_CRTIMP=1 due to possibilites
	of multiply defined symbols if the symbols is defined locally.  E.G.:
	A local definition of malloc causes this problem.
	* configure: Regenerate.
	* profile/Makefile.in (W32API_INCLUDE): New variable.
	(ALL_CFLAGS): Use W32API_INCLUDE value.
	(ALL_CXXFLAGS): Ditto.
	(gcrt0.o gcrt1.o gcrt2.o): Use ALL_CFLAGS instead of CFLAGS.
	Thanks to Jeff Bonggren <jbon@users.sf.net>.
	* profile/configure.in (W32API_INCLUDE): Set default value.
	* profile/configure: Regenerate.
	* mingwex/Makefile.in (W32API_INCLUDE): New variable.
	(ALL_CFLAGS): Use W32API-INCLUDE value.
	(ALL_CXXFLAGS): Ditto.
	* mingwex/configure.in (W32API_INCLUDE): Set default value.
	* mingwex/configure: Regenerate.

2003-05-05  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (W32API_INCLUDE): New variable.
	(ALL_CFLAGS): Use W32API_INCLUDE value.
	(ALL_CXXFLAGS): Ditto.
	* configure.in (CFLAGS): Add -D__USE_CRTIMP=1 to default values.
	(W32API_INCLUDE): Set default value.
	* configure: Regenerate.
	
2003-04-11  Earnie Boyd  <earnie@users.sf.net>

	* configure.in (LIBM_A): Define for cygwin target.
	* configure (LIBM_A): Ditto.

2003-04-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/time.h (strftime): Remove duplicate declaration.

2003-04-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (_CRTIMP): Make conditional on __USE_CRTIMP.

2003-03-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/dirent.c (_topendir): Eliminate signed/unsigned warning.
	* mingwex/strtoimax.c (strtoimax): Likewise.
	* mingwex/wcstoimax.c (wcstoimax): Likewise.
	* mingwex/wtoll.c (wtoll): Remove unnecessary ';'